# agent-chat

./: .gitignore  Cargo.toml  README.md  install.sh  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: gsd-file-manifest.json  settings.json
.claude/commands/: build.md
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-data-layer-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-domain-services-and-http-api/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-mcp-server-and-hook-ingestion/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-real-time-websocket-delivery/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-human-web-ui/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/agent-chat/: Cargo.toml
crates/agent-chat-desktop/: Cargo.toml  tauri.conf.json
crates/agent-chat-desktop/capabilities/: default.json
crates/agent-chat-desktop/src/: main.rs
crates/agent-chat/src/: lib.rs  main.rs
crates/agent-chat/src/db/: mod.rs  queries.rs
crates/agent-chat/src/http/: mod.rs
crates/agent-chat/src/services/: mod.rs
crates/agent-chat/src/watcher/: mod.rs
crates/agent-chat/src/web/: mod.rs
crates/agent-chat/src/ws/: mod.rs
packaging/macos/: create-app-bundle.sh
scripts/: setup.sh  teardown.sh  test-setup.sh
scripts/lib/: merge-settings.cjs
(+101 files in other folders)
